--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -2,12 +2,12 @@
 <div class="container d-flex justify-content-center align-items-center mt-5 mb-3 card shadow" style="max-width: 1000px;">
     <div class="row g-0">
       <div class="col-md-6 mt-3 mb-3">
-        <img src="https://images.unsplash.com/photo-1571863533956-01c88e79957e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1267&q=80"
+        <img src="media/God.jpg"
                     alt="Responsive image" class="img-fluid" />
       </div>
       <div class="col-md-6 ">
-        <div class="card-body">
-            <h5 class="card-title">Login</h5>
+        <div class="card-body mx-auto mt-auto ">
+            <h5 class="card-title text-center">Login</h5>
             <form action="/login" method="POST" class="validated-form" novalidate>
                 <div class="mb-3">
                     <label class="form-label" for="username">Username</label>
@@ -24,7 +24,11 @@
                         Looks good!
                     </div>
                 </div>
-                <button class="btn btn-success btn-block">Login</button>
+                <div class="text-end">
+                    <div class="card-body">
+                        <button class="btn btn-primary btn-block">Login</button>
+                    </div>
+                  </div>
             </form>
         </div>
       </div>
