--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,48 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
+
+
 <head>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <title>Home Page</title>
     <link rel="stylesheet" href="/stylesheets/home.css">
 </head>
-<body class="d-flex text-center text-white bg-dark">
-    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+
+
+<body class="d-flex ">
+
+    <div class="cover-container text-center text-white d-flex w-100 h-400 p-3 mx-auto flex-column">
         <header class="ml-auto">
             <div class="navbar">
-                <h3 class="float-md-left mb-0">YelpCamp</h3>
+                <h3 class="float-md-left mb-0">YelpTemple</h3>
                 <nav class="nav nav-masthead justify-content-center float-md-right">
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    <a class="nav-link" href="/campgrounds">Campgrounds</a>
+                    <a class="nav-link" href="/temples">Temples</a>
                     <% if(!currentUser) { %>
-                    <a class="nav-link" href="/login">Login</a>
-                    <a class="nav-link" href="/register">Register</a>
-                    <% } else { %>
-                    <a class="nav-link" href="/logout">Logout</a>
-                    <% } %>
+                        <a class="nav-link" href="/login">Login</a>
+                        <a class="nav-link" href="/register">Register</a>
+                        <% } else { %>
+                            <a class="nav-link" href="/logout">Logout</a>
+                            <% } %>
                 </nav>
             </div>
         </header>
-        <main class="px-3 align-items-center justify-content-center">
-            <h1 class="mt-5">YelpCamp</h1>
-            <p class="lead"> Welcome to YelpCamp! <br> Jump right in and explore our many campgrounds. <br>
-                Feel free to share some of your own and comment on others!</p>
-            <a href="/campgrounds" class="btn btn-lg btn-secondary font-weight-bold border-white bg-white">View
-                Campgrounds</a>
-        </main>
-
-        <footer class="mt-auto text-white-50">
+        <footer class="mt-auto text-white-75">
+            <section class="px-5 py-2 select-none">
+                <h3 class="card-body font-medium text-gray-800">How YelpTemple Works?</h3>
+                <div class="container card-body">
+                    <div class="row">
+                        <div class="col ">
+                            <h2 class="font-medium md:text-lg ">Post Your Nearest Temple</h2>
+                            <h5><span class="text-center text-sm md:text-base mt-2 px-2">Add the Temple with complete
+                                details.</span>
+                            </h5>
+                        </div>
+                        <div class="col">
+                            <h2 class="font-medium md:text-lg">All temples are shown.</h2>
+                            <h5><span class="text-center text-sm md:text-base mt-2 px-2">The temples in all the different areas
+                                are shown on the same map.</span>
+                            </h5>
+                        </div>
+                        <div class="col">
+                            <h2 class="font-medium md:text-lg">Get connected with Map</h2>
+                            <h5><span class="text-center text-sm md:text-base mt-2 px-2">The map allows us to see the details of
+                                a particular temple by clicking on one of the temples!</span>
+                            </h5>
+                        </div>
+                    </div>
+                </div>
+                <a href="/temples" class="btn btn-lg btn-secondary font-weight-bold border-white bg-white">View
+                    Temples</a>
+            </section>
             <p>&copy; 2021 </p>
         </footer>
     </div>
-    
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" 
-        integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" 
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"
+        integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT"
         crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bs-custom-file-input/dist/bs-custom-file-input.min.js"></script>
 </body>
+
 </html>
