--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,6 @@
-<footer class="footer mt-auto bg-dark py-3">
-    <div class="container">
-        <span class="text-muted">&copy; YelpCamp 2021</span>
+<footer class="footer mt-auto bg-primary bg-gradient py-3">
+    <div class="container text-center">
+        <strong><span class="text-light text-center">&copy; YelpTemple 2021</span></strong>
     </div>
 </footer>
 
