--- a/views/temples/view-temple.ejs
+++ b/views/temples/view-temple.ejs
@@ -3,21 +3,24 @@
     <style>
         img {
             height: 300px;
-            height: 300px;
+            width: 200px;
         }
     </style>
-    
+    <audio controls src="/media/dhat.mp3" autoplay>
+                Your browser does not support the
+                <code>audio</code> element.
+        </audio>
     <div class="row mb-3">
         <div class="col-6">
             <div id="campCarousel" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
-                    <% campground.images.forEach((image,i)=>{ %>
+                    <% temple.images.forEach((image,i)=>{ %>
                   <div class="carousel-item <%= i===0 ? 'active' : '' %> ">
                     <img src="<%= image.thumbnail %>" class="d-block w-100" alt="...">
                   </div>
                   <% }) %>
                 </div>
-                <% if(campground.images.length>1){ %> 
+                <% if(temple.images.length>1){ %> 
                 <button class="carousel-control-prev" type="button" data-bs-target="#campCarousel" data-bs-slide="prev">
                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                   <span class="visually-hidden">Previous</span>
@@ -31,27 +34,26 @@
             <div class="card">              
                 <div class="card-body">
                     <h5 class="card-title">
-                        <%= campground.title %>
+                        <%= temple.title %>
                     </h5>
                     <h6 class="card-subtitle mb-2 text-muted">
-                        <%=campground.description %>
+                        <%=temple.description %>
                     </h6>
                 </div>
                 <ul class="list-group list-group-flush">
-                        <li class="list-group-item">Submitted by <%= campground.author.username %>
+                        <li class="list-group-item">Submitted by <%= temple.author.username %>
                         </li>
                         <li class="list-group-item"> Place
-                            <%= campground.location %>
+                            <%= temple.location %>
                         </li>
-                    <li class="list-group-item">Population: <%= campground.population %>
-                    </li>
-                    <li class="list-group-item">$<%= campground.price %>
+                        
+                    <li class="list-group-item">$<%= temple.price %>
                     </li>
                 </ul>
-                <%  if( currentUser && campground.author.equals(currentUser._id))  {%>
+                <%  if( currentUser && temple.author.equals(currentUser._id))  {%>
                 <div class="card-body">
-                    <a href="/campgrounds/<%=campground._id%>/edit" class="btn btn-primary card-link">Edit</a>
-                    <form class="d-inline" action="/campgrounds/<%=campground._id%>?_method=DELETE" method="POST">
+                    <a href="/temples/<%=temple._id%>/edit" class="btn btn-primary card-link">Edit</a>
+                    <form class="d-inline" action="/temples/<%=temple._id%>?_method=DELETE" method="POST">
                         <button class="btn btn-danger">Delete</button>
                     </form>
                 </div>
@@ -65,7 +67,7 @@
             <div id='map'></div>
             <% if(currentUser){%>
           <h2>Leave a Review</h2>
-            <form action="/campgrounds/<%=campground._id%>/reviews" method="POST" class="mb-3 needs-validation" novalidate>
+            <form action="/temples/<%=temple._id%>/reviews" method="POST" class="mb-3 needs-validation" novalidate>
                 <!--<div class="mb-3">
                     <label class="form-label" for="rating">Rating</label>
                     <input class="form-range" type="range" min="1" max="5" name="review[rating]" id="rating">
@@ -95,7 +97,7 @@
                 </div>
             </form>
             <% } %> 
-            <% for(let r of campground.reviews) { %>
+            <% for(let r of temple.reviews) { %>
                 <div class="card mb-3">
                     <div class="card-body ">
                         <!--<h5 class="card-title">Rating:<%= r.rating %>
@@ -109,7 +111,7 @@
                         </h6>
                         <%  if( currentUser && r.author.equals(currentUser._id))  {%>
                         <div class="text-end">
-                            <form action="/campgrounds/<%=campground._id%>/reviews/<%=r._id %>?_method=DELETE"
+                            <form action="/temples/<%=temple._id%>/reviews/<%=r._id %>?_method=DELETE"
                                 method="POST">
                                 <button class="btn btn-danger">Delete</button>
                             </form>
@@ -122,8 +124,8 @@
     </div>
     <script>
         const mapToken = '<%=process.env.MAP_BOX_TOKEN%>';
-        const camp = <%- JSON.stringify(campground) %>
+        const temples = <%- JSON.stringify(temple) %>
     </script>
-    <script src="/javascripts/showMap.js">
+    <script src="/javascripts/showTempleMap.js">
 
     </script>
